# foxel

./: Cargo.toml  README.md  shell.nix
shader/: compute.glsl
src/: main.rs  renderer.rs  shader.rs  world.rs
